@@ -3,25 +3,38 @@ package com.footballmanagergamesimulator.transfermarket;
 import com.footballmanagergamesimulator.model.Human;
 import com.footballmanagergamesimulator.model.Team;
 import com.footballmanagergamesimulator.repository.HumanRepository;
+import com.footballmanagergamesimulator.util.TypeNames;
 
-import java.util.Comparator;
-import java.util.List;
-import java.util.Random;
+import java.util.*;
 import java.util.stream.Collectors;
 
 public class BuyMidSellMidTransferStrategy extends AbstractTransferStrategy {
 
     @Override
-    public List<PlayerTransferView> playersToSell(Team team, HumanRepository humanRepository) {
+    public List<PlayerTransferView> playersToSell(Team team, HumanRepository humanRepository, HashMap<String, Integer> minimumPositionNeeded) {
 
-      List<Human> players = humanRepository
-        .findAllByTeamIdAndTypeId(team.getId(), 1L)
+      HashMap<String, Integer> currentPositionAllocated = new HashMap<>();
+
+      List<Human> players = new ArrayList<>(humanRepository
+        .findAllByTeamIdAndTypeId(team.getId(), TypeNames.HUMAN_TYPE)
         .stream()
-        .sorted(Comparator.comparing(Human::getAge).reversed())
-        .collect(Collectors.toList());
+        .toList());
+
+      Collections.shuffle(players);
+
+      for (Human player : players)
+        currentPositionAllocated.put(player.getPosition(), currentPositionAllocated.getOrDefault(player.getPosition(), 0) + 1);
+
+      List<Human> validThatCouldBeSold = new ArrayList<>();
+      for (Human player : players) {
+        if (minimumPositionNeeded.getOrDefault(player.getPosition(), 0) < currentPositionAllocated.getOrDefault(player.getPosition(), 0)) {
+          validThatCouldBeSold.add(player);
+          currentPositionAllocated.put(player.getPosition(), currentPositionAllocated.get(player.getPosition()) - 1);
+        }
+      }
 
       List<Human> playersForSale =
-        players.subList(players.size() - new Random().nextInt(3, 6), players.size());
+        validThatCouldBeSold.subList(Math.max(validThatCouldBeSold.size() - new Random().nextInt(3, 6), 0), validThatCouldBeSold.size());
 
       return fromHumanToPlayerTransferView(team, playersForSale);
     }
@@ -29,7 +42,7 @@ public class BuyMidSellMidTransferStrategy extends AbstractTransferStrategy {
     private List<PlayerTransferView> fromHumanToPlayerTransferView(Team team, List<Human> players) {
 
       return players.stream()
-        .map(player -> new PlayerTransferView(player.getId(), team.getId(), player.getRating()))
+        .map(player -> new PlayerTransferView(player.getId(), team.getId(), player.getRating(), player.getPosition(), player.getAge()))
         .collect(Collectors.toList());
     }
 }
